# avionics_cots

./: .gitmodules  .mailmap  README.md
avionics_cots/: .gitignore  create_custom_msg.sh  platformio.ini
avionics_cots/SerialHandlerTest/: Makefile  main.cpp  serial_handler.cpp  serial_handler.hpp
avionics_cots/lib/ADS1234_Mass_Driver/: ADS1234.cpp  ADS1234.hpp
avionics_cots/lib/ADS1234_Mass_Thread/: ADS1234_Mass_Thread.cpp  ADS1234_Mass_Thread.hpp
avionics_cots/lib/Cosco/: Cosco.cpp  Cosco.hpp
avionics_cots/lib/Dust_Driver/: Dust_Driver.cpp  Dust_Driver.hpp
avionics_cots/lib/ERC_SE_CustomMessages/: CMakeLists.txt  README.md  package.xml
avionics_cots/lib/ERC_SE_CustomMessages/action/: DrillCmd.action  DroneGoal.action  HDManipulation.action  NAVReachGoal.action  NewHDGoal.action
avionics_cots/lib/ERC_SE_CustomMessages/config/: cs_interface_names.yaml  el_interface_names.yaml  hd_interface_names.yaml  nav_interface_names.yaml  rover_interface_names.yaml  science_interface_names.yaml
avionics_cots/lib/ERC_SE_CustomMessages/msg/hd/: ArucoObject.msg  BoundingBox.msg  Brick.msg  BrickArray.msg  EthernetArray.msg  HDGoal.msg  Mask.msg  Model.msg  MotorCommands.msg  MotorStatushd.msg  OldMotorStatus.msg  Probe.msg  ProbeArray.msg  Rock.msg  RockArray.msg  SegmentationData.msg  Task.msg
avionics_cots/lib/ERC_SE_CustomMessages/msg/not_hd/: Led.msg  LedsCommand.msg  MotorStatus.msg  ScDrillCmds.msg  ScMotorCmds.msg  ScMotorStatus.msg  ServoRequest.msg
avionics_cots/lib/ERC_SE_CustomMessages/srv/: CameraParams.srv  ChangeModeCamera.srv  ChangeModeSystem.srv  DrillMode.srv  DroneState.srv  EnablePipelineHd.srv  RockPipelineRequest.srv  RockSelection.srv
avionics_cots/lib/ERC_SE_CustomMessages/srv/hd/: Detect.srv  HDMode.srv  InitializeModel.srv  RequestHDGoal.srv  SetCameraRGBMode.srv
avionics_cots/lib/HM3301/: Seeed_HM330X.cpp
avionics_cots/lib/HX711_Driver/: HX711.cpp  HX711.h
avionics_cots/lib/LED_Driver/: LEDStrip.cpp  LEDStrip.h  StripPattern.cpp  StripPattern.h
avionics_cots/lib/Mass_Thread/: Mass_thread.cpp  Mass_thread.hpp
avionics_cots/lib/Monitor/: monitor.hpp
avionics_cots/lib/Packets/: generate_structs.cpp  packet_definition.hpp  packet_id.hpp
avionics_cots/lib/SerialProtocol/: SPISlaveProtocol.hpp  SerialProtocol.hpp
avionics_cots/lib/Servo_Driver/: Servo.cpp  Servo.hpp
avionics_cots/src/: main.cpp
avionics_debug/: decode_mux  packet_id.hpp
avionics_neopixel/: platformio.ini
avionics_neopixel/lib/LEDStrip/: LEDStrip.cpp
avionics_neopixel/src/: main.cpp
avionics_stack/: .gitignore  create_custom_msg.sh  platformio.ini
avionics_stack/lib/Dust_Driver/: Dust_Driver.cpp
avionics_stack/lib/HM3301/: HM330XErrorCode.h  Seeed_HM330X.h
avionics_stack/lib/Monitor/: monitor.cpp  monitor.hpp
avionics_stack/lib/Nexus/: Nexus.cpp  Nexus.hpp
avionics_stack/lib/Packets/: packet_definition.hpp  packet_id.hpp
avionics_stack/lib/SerialProtocol/: SerialProtocol.hpp
avionics_stack/src/: main.cpp
testing/: decode_simple.cpp  run.sh
